  * web/index.php: "</option" => "</option>" (fixes konqueror bug
    reported by both bma and richlowe)
  * web/index.php: add forum link
  * web/index.php: add copyright and warranty notice
  * web/README: update instructions
  * added web/config.php

* Mon Sep 01 07:59:16 2003, pabs <pabs@pablotron.org>
  * localfark.rb: make FarkLink#time work w/o mysql backend loaded
  * localfark.rb: grab latest date, not all dates
  * localfark.rb: add comments link to RSS output

* Mon Sep 01 19:16:00 2003, pabs <pabs@pablotron.org>
  * web/index.php: move require down a little

* Mon Sep 01 19:59:49 2003, pabs <pabs@pablotron.org>
  * merge in changes from 0.1.3 (everything above after incrementing
    version number)

* Mon Sep 01 20:01:08 2003, pabs <pabs@pablotron.org>
  * added web/config.php

* Mon Sep 01 20:13:33 2003, pabs <pabs@pablotron.org>
  * web/config.php: slightly cleaner config setup (incompatible with
    old config syntax)
  * web/index.php: updated to use new config.php 

* Mon Sep 01 20:22:09 2003, pabs <pabs@pablotron.org>
  * web/index.php: add $LOCALFARK_VERSION
  * README: merge changes from 0.1.3
  * increment versoin number to 0.2.0 everywhere

* Thu Nov 13 07:54:47 2003, pabs <pabs@pablotron.org>
  * added web/images/lf-title-grad.png
  * web/style.css: switch titlebar background

* Sun Jan 11 22:26:51 2004, pabs <pabs@pablotron.org>
  * localfark.rb: 1.8 updates

* Sun Jan 11 22:29:31 2004, pabs <pabs@pablotron.org>
  * release version 0.2.0

* Thu Jan 15 21:30:43 2004, pabs <pabs@pablotron.org>
  * README: update version to 0.3.0
  * COPYING: update copyright year
  * localfark.rb: incremented version to 0.3.0
  * localfark.rb: update copyright year
  * localfark.rb: fix for new date format (caught by Tom Gilbert)
  * localfark.rb: display number of updated links as well
  * localfark.rb: update date along with status if link already exists in
                  db
  * web/index.php: increment version to 0.3.0